# Changelog

## v0.5.0 (work in progress)

- Linux: Fix NormCap to work with Sway DE. ([#485](https://github.com/dynobo/normcap/issues/485))

## v0.4.4 (2023-06-04)

- All: Fix regression causing exit through system tray not working.
  ([#458](https://github.com/dynobo/normcap/issues/458))

## v0.4.3 (2023-06-03)

- All: Add command line flag `--background-mode` to start normcap minimized.
  ([#439](https://github.com/dynobo/normcap/issues/439))
- macOS: Improve dialog that is shown in case screenshot permissions are missing.
- Windows: Fix upgrading with `msi`-installer might lead to error on startup.
  ([#452](https://github.com/dynobo/normcap/issues/452))
- Windows: Upgrading with `msi`-installer should not remove downloaded languages in
  future versions anymore.

## v0.4.2 (2023-05-21)

- Fix quotes in detected text can result in wrong detection.
  ([#446](https://github.com/dynobo/normcap/issues/446))
- Update AppImage base image from Ubuntu 18.04 (deprected) to 20.04.

## v0.4.1 (2023-05-01)

- Enlarge settings button a bit to make it easier to spot.
  ([#254](https://github.com/dynobo/normcap/issues/254))
- Prevent running multiple instances and start capture in original instance instead.
  ([#306](https://github.com/dynobo/normcap/issues/306))
- Fix unintended re-capture if tray icon is disabled.
  ([#254](https://github.com/dynobo/normcap/issues/254))
- Fix occasional crashes after use of Language Manager.
- Add experimental `--cli-mode` switch to print NormCap's detection to STDOUT and exit
  immediately. This is useful if you want to use the detected text as input for other
  programs or commands. E.g.:
  ```sh
  normcap --cli-mode | xargs -I {} firefox "http://duckduckgo.com/?q={}"`
  ```

## v0.4.0 (2023-01-29)

- All: Remove support for Tesseract \< 5.0.
- All: Faster startup if "Check for updates" is enabled.
- All: Refactor icon handling. Fixes a bug in the AUR package.
  ([#353](https://github.com/dynobo/normcap/issues/353))