@@ -3,6 +3,7 @@
 ## v0.5.0 (work in progress)
 
 - Linux: Fix NormCap to work with Sway DE. ([#485](https://github.com/dynobo/normcap/issues/485))
+- Linux: Fix multi monitor setups with Wayland causing unnecessary timeouts. ([#494](https://github.com/dynobo/normcap/issues/494))
 
 ## v0.4.4 (2023-06-04)
 
